--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -2417,3 +2417,12 @@ volume = {239}
   year={2022},
   publisher={Elsevier}
 }
+
+@article{vonB1938,
+author = {von Bertalanffy, L},
+journal = {Human Biology},
+pages = {181--213},
+title = {{A quantitative theory of organic growth}},
+volume = {10},
+year = {1938}
+}
