--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -130,7 +130,7 @@ A summary of sampling efforts (number of hauls and number of individual fish) in
 
 Several biological parameters used in the assessment were estimated outside the model or obtained from literature. Their values were treated in the model as fixed, and therefore uncertainty reported for the stock assessment results does not include any uncertainty in these quantities (however, some were investigated via sensitivity analyses described later in this report). These parameters include length-weight relationship parameters, maturity and fecundity parameters, natural mortality, and ageing error. The methods used to derive these parameters in the assessment are described below.
 
-### Growth Relationships
+### Length-Weight Relationships
 
 The parameters for the length-weight relationship were updated to include the most recent WCGBTS data from 2017 - 2024. Length-weight curves were fitted using this equation: 
 
