--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -128,15 +128,13 @@ A summary of sampling efforts (number of hauls and number of individual fish) in
 
 ## Biological Parameters and Data
 
-Several biological parameters used in the assessment were estimated outside the model or obtained from literature. Their values were treated in the model as fixed, and therefore uncertainty reported for the stock assessment results does not include any uncertainty in these quantities (however, some were investigated via sensitivity analyses described later in this report). These parameters include length-weight relationship parameters, maturity and fecundity parameters, natural mortality, and ageing error. The methods used to derive these parameters in the assessment are described below.
+Several biological parameters used in the assessment were estimated outside the model or obtained from literature. Their values were treated in the model as fixed, and therefore uncertainty reported for the stock assessment results does not include any uncertainty in these quantities (however, some were investigated via sensitivity analyses described later in this report). These parameters include length-weight relationship parameters, maturity and fecundity parameters, natural mortality, and ageing error. Aging error matrices were unchanged. The methods used to derive these parameters in the assessment are described below.
 
 ### Length-Weight Relationships
 
 The parameters for the length-weight relationship were updated to include the most recent WCGBTS data from 2017 - 2024. Length-weight curves were fitted using this equation: 
 
-::: center
-$W$ =$ `r mod_in$ctl$MG_parms['Wtlen_1_Fem_GP_1', 'INIT']*(10^6)`\*10^-6^$L$^`r mod_in$ctl$MG_parms['Wtlen_2_Fem_GP_1', 'INIT']`^
-:::
+$W$ = `r mod_in$ctl$MG_parms['Wtlen_1_Fem_GP_1', 'INIT']*(10^6)`\*10^-6^$L$^`r mod_in$ctl$MG_parms['Wtlen_2_Fem_GP_1', 'INIT']`^
 
 Where $W$ is individual weight (kg) and $L$ is total natural length (cm) (@fig-LWrel). 
 
@@ -154,9 +152,6 @@ Where $F$ is fecundity (number of eggs), $L$ is fish length (cm), and $a$ and $b
 
 ### Natural Mortality
 The 2025 base model used the 2017 assessment's initial value of natural Mortality ($M$) which was estimated based on @hamel_method_2015.
-
-Aging error matrices were unchanged. 
-
 
 ## Environmental and ecosystem data
 
