--- a/report/06_acknowledgments.qmd
+++ b/report/06_acknowledgments.qmd
@@ -1,1 +1,3 @@
 # Acknowledgements {#sec-acknowledgements}
+
+The authors would like to thank the other members of the FSH 577 class, particularly those on the Yelloweye Rockfish team (Emily Branam, Julia Coates, Kimberly Fitzpatrick, Madison Sandquist, Olivia Boisen and Rachel Brooks). 
