--- a/report/05_management.qmd
+++ b/report/05_management.qmd
@@ -8,7 +8,7 @@
 <!-- 4. Reference points based on MSY (if estimated) (spawning biomass and/or output, SPR, exploitation rate, equilibrium yield).  -->
 <!-- 5. Equilibrium yield curve showing various BMSY proxies.   -->
 
-This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of its unexploited level. This is above the overfished threshold of SO25%, and slightly above the management target of SO40% of unfished spawning biomass. Both areas are above the overfished level of 25%. The assessment estimates that the coastwide spawning output of Yelloweye Rockfish dropped below the SO40% target for the first time in 1986 and below the overfished SO25% threshold in 1993, as a result of intense fishing by commercial and recreational fleets. It continued to decline and reached 14.2% of its unfished output in 2000 (@tbl-ts). The same year, the stock was declared overfished. Since then, the spawning output has slowly increased due to management regulations implemented to foster stock rebuilding.
+This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of its unexploited level. This is above the overfished threshold of SO25%, and slightly above the management target of SO40% of unfished spawning output. Both areas are above the overfished level of 25%. The assessment estimates that the coastwide spawning output of Yelloweye Rockfish dropped below the SO40% target for the first time in 1986 and below the overfished SO25% threshold in 1993, as a result of intense fishing by commercial and recreational fleets. It continued to decline and reached 14.2% of its unfished output in 2000 (@tbl-ts). The same year, the stock was declared overfished. Since then, the spawning output has slowly increased due to management regulations implemented to foster stock rebuilding.
 
 Reference points for the base model are summarized in @tbl-ref-points-es-2. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 1,048.1-1,331.9 million eggs). The stock is declared overfished if the current spawning output is estimated to be below the \gls{msst} of 25% of unfished level (SO25%). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SO40%), which is estimated by the model to be 476 million eggs (95% confidence interval: 419-533 million eggs), which corresponds to an exploitation rate of 0.026. This harvest rate provides an equilibrium yield of 122 mt at SO40% (95% confidence interval: 108-137 mt). The model estimate of maximum sustainable yield (MSY) is 128 mt (95% confidence interval: 113-143 mt). The estimated spawning stock output at MSY is 343 million eggs (95% confidence interval: 303-384 million eggs). The exploitation rate corresponding to the estimated SPRMSY of F36% is 0.037.
 
@@ -22,7 +22,7 @@ Twelve-year forecasts for each state of nature were calculated (@tbl-es-decision
 
 ## Evaluation of Scientific Uncertainty
 
-The model estimated uncertainty around the 2025 spawning biomass with a standard deviation = `r round(mod_out$derived_quants$StdDev[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)`. The uncertainty around the \gls{ofl} in 2025 has a standard deviation = `r round(mod_out$derived_quants$StdDev[which(mod_out$derived_quants$Label=="OFLCatch_2025")], 3)`. Each of these are likely underestimates of overall uncertainty due to the necessity to fix several key population dynamics parameters (e.g. steepness and recruitment variance) and also because there is no explicit incorporation of model structural uncertainty (although see the decision table for alternative states of nature).
+The model estimated uncertainty around the 2025 spawning output with a standard deviation = `r round(mod_out$derived_quants$StdDev[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)`. The uncertainty around the \gls{ofl} in 2025 has a standard deviation = `r round(mod_out$derived_quants$StdDev[which(mod_out$derived_quants$Label=="OFLCatch_2025")], 3)`. Each of these are likely underestimates of overall uncertainty due to the necessity to fix several key population dynamics parameters (e.g. steepness and recruitment variance) and also because there is no explicit incorporation of model structural uncertainty (although see the decision table for alternative states of nature).
 
 ## Regional management considerations
 
